# robot-motion

./: README.md
force_control/: CMakeLists.txt  package.xml
ik_solvers/: CMakeLists.txt  package.xml
ik_solvers/include/: ik_solver.hpp
kuka_motion/: CMakeLists.txt  package.xml
modern_robotics/: CMakeLists.txt  package.xml
robot_control/: CMakeLists.txt  package.xml
robot_control/data/: circle.txt  desired_position_FM.txt  desired_position_FM_dynamic.txt  desired_position_FM_dynamic_1.txt  identification_friction_circle.txt  identification_friction_eight.txt  identification_friction_linear.txt  identification_stiffness.txt  line.txt  q.txt  q_torsional_test.txt
robot_control/include/: robot_interface_real_wrench.hpp  robot_interface_sim_wrench.hpp  robot_motion_library.hpp  utils.hpp
robot_control/launch/: force_modulation.launch  optical_sphere_trace.launch
robot_control/scripts/: KUKA_TESTS.cpp  path_test.cpp  position_wrench.cpp  stiffness_identification_surface.cpp  stiffness_identification_surface_static.cpp  torsional_test.cpp
robot_control/scripts/python/: kuka_kinematics.py  stiffness_identification.py
robot_control/src/: kuka_lib.cpp  qpMPC.cpp  robot_motion_library.cpp  utils.cpp
robot_control/src/Resources/: MPCprob.py  getMPC.m  solveMPCprob.m
robot_interface/: CMakeLists.txt  package.xml
robot_interface/include/robot_interface/: robot_class.hpp  robot_interface.hpp  robot_interface_force_control.hpp  robot_interface_sim.hpp
robot_interface/src/: robot_class.cpp  robot_interface_sim.cpp
robot_models/: CMakeLists.txt  package.xml
robot_models/KDL/: kuka_model.cpp
robot_models/include/: kuka_model.h  models.h
robot_models/src/: KukaModel.cpp
robot_motion/: CMakeLists.txt  package.xml
robot_motion/data/: desired_position.txt  desired_position_0.03.txt  desired_position_FM_dynamic_circle.txt  desired_position_wrench.txt  eight.txt  identification_friction.txt  identification_friction_linear_2.txt  torsional_test.txt
robot_motion/include/: kuka_lib.h  robot_kinematics.hpp  robot_motion_library.hpp  robot_tree.hpp
robot_motion/launch/: force_modulation_ADMM.launch
robot_motion/scripts/: TODO.txt  kuka_continuous_path.cpp  kuka_force_modulation_data.cpp  kuka_sphere_calibration.cpp  kuka_spline_test.cpp  mpc_node.py  optical_sphere_trace.cpp  path_test.cpp  position_wrench.cpp  position_wrench_command.cpp  robot_real.cpp  surface_estimation_kf.py
robot_motion/src/: kuka_discrete_path.cpp  kuka_kinematics.py  pybindings.cpp  robot_kinematics.cpp  robot_motion_library.cpp  robot_tree.hpp  utils.cpp  utils_mpc.cpp
robot_motion/src/Resources/: __init__.py  bdiag.py  getMPCmatrices.py
